Update spanish translations
(Old svn revision: 3540)

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2003-02-02 21:53+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Jaime Buffery <the_new_guiri@yahoo.es>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,21 +21,21 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Remover un elemento también removerá su menú emergente.\n"
+"Quitar un elemento también quitará su menú emergente.\n"
 "\n"
-"Desea remover el elemento?"
+"Desea quitar el elemento?"
 
 #: panel/controls.c:307 panel/panel.c:113
 msgid "/_Properties..."
-msgstr ""
+msgstr "/_Propiedades..."
 
 #: panel/controls.c:308
 msgid "/_Remove"
-msgstr "/_Remover"
+msgstr "/_Quitar"
 
 #: panel/controls.c:310 panel/panel.c:111
 msgid "/Add _new item"
-msgstr "/Adicionar nuevo elemento"
+msgstr "/Añadir nuevo elemento"
 
 #: panel/controls.c:581
 msgid "This item has no configuration options"
@@ -47,7 +47,7 @@ msgstr "Cambiar elemento"
 
 #: panel/controls_dialog.c:252 panel/item_dialog.c:858
 msgid "_Revert"
-msgstr "_Revertir"
+msgstr "_Deshacer"
 
 #: panel/controls_dialog.c:256 panel/item_dialog.c:863
 msgid "_Done"
@@ -63,7 +63,7 @@ msgstr "Posición"
 
 #: panel/icons.c:65
 msgid "Default"
-msgstr "Por omisión"
+msgstr "Por defecto"
 
 #: panel/icons.c:66
 msgid "Editor"
@@ -75,7 +75,7 @@ msgstr "Administración de archivos"
 
 #: panel/icons.c:68
 msgid "Utilities"
-msgstr "Utilerías"
+msgstr "Utilidades"
 
 #: panel/icons.c:69
 msgid "Games"
@@ -115,11 +115,11 @@ msgstr "Terminal"
 
 #: panel/info.c:141
 msgid "XFce Desktop Environment"
-msgstr ""
+msgstr "Entorno de Escritorio XFce"
 
 #: panel/info.c:146
 msgid "Copyright 2002-2003 by Olivier Fourdan"
-msgstr ""
+msgstr "Copyright 2002-2003, Olivier Fourdan"
 
 #: panel/info.c:160 panel/info.c:272 plugins/systembuttons/systembuttons.c:140
 #: plugins/systembuttons/systembuttons.c:560
@@ -140,27 +140,27 @@ msgstr "Pinche el botón 3 del ratón para cambiar elemento"
 
 #: panel/item.c:309
 msgid "Add launcher"
-msgstr "Adicionar launcher"
+msgstr "Añadir lanzador"
 
 #: panel/item.c:313
 msgid "Add new item"
-msgstr "Adicionar nuevo elemento"
+msgstr "Añadir nuevo elemento"
 
 #: panel/item.c:430
 msgid "Launcher"
-msgstr ""
+msgstr "Lanzador"
 
 #: panel/item_dialog.c:247
 msgid "Other Icon"
-msgstr "Otro ícono"
+msgstr "Otro Icono"
 
 #: panel/item_dialog.c:271
 msgid "Select icon"
-msgstr "Seleccionar ícono"
+msgstr "Seleccionar icono"
 
 #: panel/item_dialog.c:306
 msgid "Icon:"
-msgstr "Ícono:"
+msgstr "Icono:"
 
 #: panel/item_dialog.c:350
 msgid "Select command"
@@ -176,29 +176,29 @@ msgstr "Ejecutar en _terminal"
 
 #: panel/item_dialog.c:423
 msgid "Caption:"
-msgstr ""
+msgstr "Captura"
 
 #: panel/item_dialog.c:461
 msgid "Tooltip:"
-msgstr ""
+msgstr "Etiqueta explicativa"
 
 #: panel/item_dialog.c:596
 msgid "Icon Preview"
-msgstr "Prevista de ícono"
+msgstr "Vista preliminar del icono"
 
 #: panel/item_dialog.c:600
 msgid "Drag file onto this frame to change the icon"
-msgstr "Jala el archivo a este marco para cambiar el ícono"
+msgstr "Arrastre el fichero a este marco para cambiar el icono"
 
 #. create dialog
 #: panel/item_dialog.c:845
 msgid "Change menu item"
-msgstr "Cambiar elemento de menú"
+msgstr "Cambiar elemento del menú"
 
 #. add buttons
 #: panel/item_dialog.c:853
 msgid "Remove"
-msgstr "Remover"
+msgstr "Quitar"
 
 #: panel/main.c:71
 msgid "Are you sure you want to exit?"
@@ -211,8 +211,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, versión %s\n"
-"Parte del ambiente de escritorio XFce\n"
+"%s, versió %s\n"
+"Parte del Entorno de Escritorio XFce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:171
@@ -220,11 +220,13 @@ msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
-msgstr ""
+msgstr "Su gestor de ventanas no parece que soporte las nuevas funcionalidades como "
+"se definen en http://www.freedesktop.org. \n"
+"Algunas características puede que no funcionen adecuadamente."
 
 #: panel/mcs_client.c:192
 msgid "Settings manager not available"
-msgstr "Administrador de sessión no disponible"
+msgstr "Administrador de sesión no está disponible"
 
 #: panel/panel.c:109
 msgid "/XFce Panel"
@@ -244,7 +246,7 @@ msgstr "/Ayuda"
 
 #: panel/panel.c:119
 msgid "/_Lock screen"
-msgstr "/B_Loquear estación"
+msgstr "/B_Loquear pantalla"
 
 #: panel/panel.c:120
 msgid "/E_xit"
@@ -269,7 +271,7 @@ msgstr "Pequeñito"
 
 #: settings/xfce_settings_dialog.c:130
 msgid "Small"
-msgstr "Pequeño"
+msgstr "PequeÃ±o"
 
 #: settings/xfce_settings_dialog.c:134
 msgid "Medium"
@@ -307,19 +309,19 @@ msgstr "Abajo"
 
 #: settings/xfce_settings_dialog.c:361
 msgid "Panel size:"
-msgstr "Tamaño de panel:"
+msgstr "Tamaño del panel:"
 
 #: settings/xfce_settings_dialog.c:377
 msgid "Panel orientation:"
-msgstr "Orientación de panel:"
+msgstr "Orientación del panel:"
 
 #: settings/xfce_settings_dialog.c:394
 msgid "Popup position:"
-msgstr "Posición de menú emergente:"
+msgstr "Posición del menú emergente:"
 
 #: settings/xfce_settings_dialog.c:411
 msgid "Icon theme:"
-msgstr "Tema de íconos:"
+msgstr "Tema de los iconos:"
 
 #: settings/xfce_settings_dialog.c:479
 msgid "Panel layer:"
@@ -335,11 +337,11 @@ msgstr "Centrar el panel:"
 
 #: settings/xfce_settings_dialog.c:542
 msgid "Set"
-msgstr "Fijar"
+msgstr "Configurar"
 
 #: settings/xfce_settings_dialog.c:593
 msgid "XFce Panel Settings"
-msgstr "Configuración del panel XFce"
+msgstr "Configuración del panel de XFce"
 
 #: settings/xfce_settings_dialog.c:611
 msgid "Appearance"
@@ -431,19 +433,19 @@ msgstr "Tipo de reloj:"
 
 #: plugins/clock/clock.c:340
 msgid "Analog"
-msgstr "Análogo"
+msgstr "Analógico"
 
 #: plugins/clock/clock.c:344
 msgid "Digital"
-msgstr ""
+msgstr "Digital"
 
 #: plugins/clock/clock.c:348
 msgid "LED"
-msgstr ""
+msgstr "LED"
 
 #: plugins/clock/clock.c:410
 msgid "Hour mode:"
-msgstr ""
+msgstr "Modo Horario"
 
 #: plugins/clock/clock.c:417
 #, fuzzy
@@ -452,11 +454,11 @@ msgstr "Reloj de 24 horas:"
 
 #: plugins/clock/clock.c:423
 msgid "12 hour"
-msgstr ""
+msgstr "Reloj de 12 horas"
 
 #: plugins/clock/clock.c:429
 msgid "AM/PM"
-msgstr ""
+msgstr "AM/PM"
 
 #: plugins/clock/clock.c:468
 msgid "Show seconds:"
@@ -464,7 +466,7 @@ msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:579
 msgid "Xfce Clock"
-msgstr "Reloj XFce"
+msgstr "Reloj de XFce"
 
 #: plugins/mailcheck/mailcheck.c:470
 msgid "Mail box:"
@@ -472,15 +474,15 @@ msgstr "Buzón de correo:"
 
 #: plugins/mailcheck/mailcheck.c:550
 msgid "Mail command:"
-msgstr "Comando de correo:"
+msgstr "Programa de correo:"
 
 #: plugins/mailcheck/mailcheck.c:562
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Comando a ejecutar cuando el botón del panel se pincha"
+msgstr "Comando a ejecutar cuando se pinche en el botón del panel"
 
 #: plugins/mailcheck/mailcheck.c:616
 msgid "Interval (sec):"
-msgstr "Intervalo (sec):"
+msgstr "Intervalo (seg):"
 
 #: plugins/mailcheck/mailcheck.c:695
 msgid "Mail check"
@@ -488,7 +490,7 @@ msgstr "Revisar correo"
 
 #: plugins/switcher/switcher.c:916
 msgid "Use graphical pager"
-msgstr "Usar pager gráfico"
+msgstr "Usar paginador gráfico"
 
 #: plugins/switcher/switcher.c:969
 msgid "Desktop switcher"
@@ -500,13 +502,13 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"El acceso al sistema de configuración está vedado.\n"
+"El acceso al sistema de configuración está inhabilitado.\n"
 "\n"
-"Pregúntele por qué a su administrador de sistema"
+"Para más información consulte con su administrador de sistema"
 
 #: plugins/systembuttons/systembuttons.c:137
 msgid "Lock the screen"
-msgstr ""
+msgstr "Bloquear la pantalla"
 
 #: plugins/systembuttons/systembuttons.c:138
 #: plugins/systembuttons/systembuttons.c:558
@@ -543,13 +545,13 @@ msgstr "Botones de sistema"
 #~ msgstr "/Configuración del _Panel"
 
 #~ msgid "Trashcan: 0 files"
-#~ msgstr "Bote de basura: 0 archivos"
+#~ msgstr "Cubo de basura: 0 archivos"
 
 #~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Bote de basura: %d archivos / %d %s"
+#~ msgstr "Cubo de basura: %d archivos / %d %s"
 
 #~ msgid "Trash can"
-#~ msgstr "Bote de basura"
+#~ msgstr "Cubo de basura"
 
 #~ msgid "XFce 4"
 #~ msgstr "XFce 4"
