--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: XFCE4\n"
 "POT-Creation-Date: 2003-02-02 21:53+0100\n"
-"PO-Revision-Date: 2003-01-30 15:30+0200\n"
+"PO-Revision-Date: 2003-02-09 16:40+0200\n"
 "Last-Translator: Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,7 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Osan poista poistoo myÃ¶s ponnahdus valikon.\n"
+"Osan poista poistoo myös ponnahdus valikon.\n"
 "\n"
 "Haluatko poistaa osan?"
 
@@ -35,11 +35,11 @@ msgstr "/_Poista"
 
 #: panel/controls.c:310 panel/panel.c:111
 msgid "/Add _new item"
-msgstr "/_LisÃ€Ã€ uusi osa"
+msgstr "/_Lisää uusi osa"
 
 #: panel/controls.c:581
 msgid "This item has no configuration options"
-msgstr "TÃ€llÃ€ osalla ei ole muokattavia ominaisuuksi"
+msgstr "Tällä osalla ei ole muokattavia ominaisuuksi"
 
 #: panel/controls_dialog.c:243
 msgid "Change item"
@@ -107,15 +107,15 @@ msgstr "Tuottavuus"
 
 #: panel/icons.c:76
 msgid "Sound"
-msgstr "ÃÃ€ni"
+msgstr "Ääni"
 
 #: panel/icons.c:77
 msgid "Terminal"
-msgstr "PÃ€Ã€te"
+msgstr "Pääte"
 
 #: panel/info.c:141
 msgid "XFce Desktop Environment"
-msgstr ""
+msgstr "XFce Työpöytä Ympäristö"
 
 #: panel/info.c:146
 msgid "Copyright 2002-2003 by Olivier Fourdan"
@@ -128,7 +128,7 @@ msgstr "Tietoja"
 
 #: panel/info.c:226
 msgid "Credits"
-msgstr "Kiitokset"
+msgstr "Kehittäjät"
 
 #: panel/info.c:248
 msgid "License"
@@ -136,19 +136,19 @@ msgstr "Lisenssi"
 
 #: panel/item.c:290
 msgid "Click mouse button 3 to change item"
-msgstr ""
+msgstr "Paina hiiren 3-napilla vaihtaaksesi osan"
 
 #: panel/item.c:309
 msgid "Add launcher"
-msgstr "LisÃ€Ã€ kÃ€ynnistin"
+msgstr "Lisää ynnistin"
 
 #: panel/item.c:313
 msgid "Add new item"
-msgstr "LisÃ€Ã€ uusi osa"
+msgstr "Lisää uusi osa"
 
 #: panel/item.c:430
 msgid "Launcher"
-msgstr "KÃ€ynnistin"
+msgstr "Käynnistin"
 
 #: panel/item_dialog.c:247
 msgid "Other Icon"
@@ -172,15 +172,15 @@ msgstr "Komento:"
 
 #: panel/item_dialog.c:401 plugins/mailcheck/mailcheck.c:591
 msgid "Run in _terminal"
-msgstr "Aja PÃ€Ã€_tteessÃ€"
+msgstr "Aja Päätteessä"
 
 #: panel/item_dialog.c:423
 msgid "Caption:"
-msgstr "Valikko teksti"
+msgstr "Valikko teksti:"
 
 #: panel/item_dialog.c:461
 msgid "Tooltip:"
-msgstr "Kuvaus"
+msgstr "Kuvaus:"
 
 #: panel/item_dialog.c:596
 msgid "Icon Preview"
@@ -188,7 +188,7 @@ msgstr "Kuvakkeen esikatselu"
 
 #: panel/item_dialog.c:600
 msgid "Drag file onto this frame to change the icon"
-msgstr "Raahaa tiedosto tÃ€hÃ€n kehykseen vaihtaaksesi kuvaketta"
+msgstr "Raahaa tiedosto tähänn kehykseen vaihtaaksesi kuvaketta"
 
 #. create dialog
 #: panel/item_dialog.c:845
@@ -212,7 +212,7 @@ msgid ""
 "http://www.xfce.org\n"
 msgstr ""
 "%s, versio %s\n"
-"Osa XFce TyÃ¶pÃ¶ytÃ€ympÃ€ristÃ¶Ã€\n"
+"Osa XFce Työpöytäympäristöä\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:171
@@ -221,9 +221,9 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Ikkunamanagerisi ei nÃ€ytÃ€ tukevan uusia ikkunamanageri ohjeita, jotka on mÃ"
-"€Ã€ritelty http://www.freedesktop.org.\n"
-"Jotkin XFce:n ominaisuudet eivÃ€t vÃ€lttÃ€mÃ€ttÃ€ toimi kuten on tarkoitus."
+"Ikkunamanagerisi ei näytä tukevan uusia ikkunamanageri ohjeita, jotka on määritelty"
+"http://www.freedesktop.org.\n"
+"Jotkin XFce:n ominaisuudet eivät välttämättä toimi kuten on tarkoitus."
 
 #: panel/mcs_client.c:192
 msgid "Settings manager not available"
@@ -239,7 +239,7 @@ msgstr "/Asetusten _hallinta"
 
 #: panel/panel.c:116
 msgid "/_About XFce"
-msgstr "/_Tietoja XFce:stÃ€"
+msgstr "/_Tietoja XFce:stä"
 
 #: panel/panel.c:117
 msgid "/_Help"
@@ -247,7 +247,7 @@ msgstr "/A_pua"
 
 #: panel/panel.c:119
 msgid "/_Lock screen"
-msgstr "/_Lukitse nÃ€yttÃ¶"
+msgstr "/_Lukitse näyttö"
 
 #: panel/panel.c:120
 msgid "/E_xit"
@@ -301,7 +301,7 @@ msgstr "Oikea"
 #: settings/xfce_settings_dialog.c:229 settings/xfce_settings_dialog.c:441
 #: settings/xfce_settings_dialog.c:495
 msgid "Top"
-msgstr "YlÃ€osa"
+msgstr "Yläosa"
 
 #: settings/xfce_settings_dialog.c:233 settings/xfce_settings_dialog.c:440
 #: settings/xfce_settings_dialog.c:503
@@ -334,7 +334,7 @@ msgstr "Normaali"
 
 #: settings/xfce_settings_dialog.c:518
 msgid "Center the panel:"
-msgstr "KeskitÃ€ paneeli:"
+msgstr "Keskitä paneeli:"
 
 #: settings/xfce_settings_dialog.c:542
 msgid "Set"
@@ -346,7 +346,7 @@ msgstr "XFce Paneeli Asetukset"
 
 #: settings/xfce_settings_dialog.c:611
 msgid "Appearance"
-msgstr "UlkonÃ€kÃ¶"
+msgstr "Ulkonäkö"
 
 #: settings/xfce_settings_dialog.c:629
 msgid "Position"
@@ -402,11 +402,11 @@ msgstr "Toukokuu"
 
 #: plugins/clock/clock.c:61
 msgid "June"
-msgstr "KesÃ€kuu"
+msgstr "Kesäkuu"
 
 #: plugins/clock/clock.c:62
 msgid "July"
-msgstr "HeinÃ€kuu"
+msgstr "Heinäkuu"
 
 #: plugins/clock/clock.c:63
 msgid "August"
@@ -446,16 +446,16 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:410
 msgid "Hour mode:"
-msgstr ""
+msgstr "Tuntinäyttö"
 
 #: plugins/clock/clock.c:417
 #, fuzzy
 msgid "24 hour"
-msgstr "24-tunnin kello:"
+msgstr "24-tuntinen"
 
 #: plugins/clock/clock.c:423
 msgid "12 hour"
-msgstr ""
+msgstr "12-tuntinen"
 
 #: plugins/clock/clock.c:429
 msgid "AM/PM"
@@ -463,7 +463,7 @@ msgstr ""
 
 #: plugins/clock/clock.c:468
 msgid "Show seconds:"
-msgstr "NÃ€ytÃ€ sekunnit:"
+msgstr "Näytä sekunnit:"
 
 #: plugins/clock/clock.c:579
 msgid "Xfce Clock"
@@ -483,7 +483,7 @@ msgstr "Komento joka ajetaan kun kuvaketta painetaan"
 
 #: plugins/mailcheck/mailcheck.c:616
 msgid "Interval (sec):"
-msgstr "VÃ€li (sekunttia):"
+msgstr "Väli (sekunttia):"
 
 #: plugins/mailcheck/mailcheck.c:695
 msgid "Mail check"
@@ -491,11 +491,11 @@ msgstr "Postin tarkistus"
 
 #: plugins/switcher/switcher.c:916
 msgid "Use graphical pager"
-msgstr "KÃ€ytÃ€ graafista tyÃ¶pÃ¶ytÃ€ valikkoa"
+msgstr "Käytä graafista työpöydän vaihdinta"
 
 #: plugins/switcher/switcher.c:969
 msgid "Desktop switcher"
-msgstr "TyÃ¶pÃ¶ydÃ€n vaihtaja"
+msgstr "Työpöydän vaihtaja"
 
 #: plugins/systembuttons/systembuttons.c:51
 msgid ""
@@ -503,13 +503,13 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"PÃ€Ã€sy asetus jÃ€rjestelmÃ€Ã€n on estetty.\n"
+"Pääsysti konfigurointijärjestelmään on estetty.\n"
 "\n"
-"Kysy jÃ€rjestelmÃ€n yllÃ€pitÃ€jÃ€ltÃ€ enemmÃ€n informaatiota."
+"Kysy järjestelmäsi ylläpidolta enemmän tietoa asiasta"
 
 #: plugins/systembuttons/systembuttons.c:137
 msgid "Lock the screen"
-msgstr "Lukitse nÃ€yttÃ¶"
+msgstr "Lukitse näyttö"
 
 #: plugins/systembuttons/systembuttons.c:138
 #: plugins/systembuttons/systembuttons.c:558
@@ -523,7 +523,7 @@ msgstr "Asetukset"
 
 #: plugins/systembuttons/systembuttons.c:541
 msgid "Show two buttons:"
-msgstr "NÃ€ytÃ€ kaksi nappia:"
+msgstr "Näytä kaksi nappia:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:557
@@ -540,34 +540,5 @@ msgstr "Nappi 2:"
 
 #: plugins/systembuttons/systembuttons.c:648
 msgid "System buttons"
-msgstr "JÃ€rjestelmÃ€ napit"
+msgstr "Järjestelmä napit"
 
-#~ msgid "/_Panel settings"
-#~ msgstr "/Paneelin a_setukset"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Roskakori: 0 tiedostoa"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Roskakori: %d tiedostoa / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Roskakori"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "NÃ€ytÃ€ AM/PM -tyylisesti:"
-
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Tehnyt Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Traditional"
-#~ msgstr "Perinteinen"
-
-#~ msgid "Modern"
-#~ msgstr "Moderni"
-
-#~ msgid "Panel style:"
-#~ msgstr "Paneelin tyyli:"
