Update TODO list
(Old svn revision: 3551)

--- a/TODO
+++ b/TODO
@@ -4,18 +4,17 @@ TODO list for xfce4
 Major features for 4.0
 ----------------------
 * port to global settings manager system	DONE
-* write API docs for plugin writers
-* write user docs
+* write user docs				STARTED
 * provide good default configuration
+* finish info panel text ad credits		STARTED
 
 Nice to have for 4.0
 --------------------
 * more themes: Night, KDE, Next, WindowsXP, BeOS, ...
   (not too many released with xfce4; < 10)
-* new dialog for panel controls (treeview with dialog area)
-  adding/removing controls from here.
+* snap panel to corners and center of screen edges
 
-Other feature ideas 
+After 4.0 
 ------------------------------------
 * volume control plugin
 * notification area plugin (as used by GNOME and KDE). 
@@ -23,5 +22,8 @@ Other feature ideas
 * dockapps support
 * swallow apps
 * hide popup buttons
+* write API docs for plugin writers		
+* new dialog for panel controls (treeview with dialog area)
+  adding/removing controls from here.
 
 
