--- a/TODO
+++ b/TODO
@@ -3,10 +3,8 @@ TODO list for xfce4
 
 Major features for 4.0
 ----------------------
-* port to global settings manager system	DONE
 * write user docs				STARTED
 * provide good default configuration
-* finish info panel text ad credits		STARTED
 
 Nice to have for 4.0
 --------------------
@@ -16,13 +14,20 @@ Nice to have for 4.0
 
 After 4.0 
 ------------------------------------
-* volume control plugin
-* notification area plugin (as used by GNOME and KDE). 
-  This would be really cool!
-* dockapps support
-* swallow apps
-* hide popup buttons
-* write API docs for plugin writers		
+* make panel a gtk widget
+  - include move handles (steal code form GtkHandlebox)
+  - use properties and signals for settings
+* make controls / control classes a widget or gobject
+  - use refcounting on classes to load / unload modules
+  - perhaps using a timeout
+  - perhaps use interfaces or derived widgets for controls
+* plugins:
+  - volume control plugin
+  - notification area plugin (as used by GNOME and KDE)
+    This would be really cool!
+  - dockapps support
+* allow hiding of all popup buttons
+* write API docs for plugin writers
 * new dialog for panel controls (treeview with dialog area)
   adding/removing controls from here.
 
