Update ChangeLog Update build scripts (ie rerun autogen.sh) Update xfwm4's microdeck theme Remove 1 pix border arround xffm menu bar
(Old svn revision: 3591)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-03-13  bmeurer
+
+	* panel/mcs_client.c, panel/main.c,
+	plugins/systembuttons/systembuttons.c: show_*() -> xfce_*()
+
+2003-03-13  xfce
+
+	* ChangeLog: Update Changelogs
+
 2003-03-10  bmeurer
 
 	* example.xfce4rc.in: Use xfprint-manager in the panel.
