--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2003-03-20  xfce
+
+	* panel/controls_dialog.c, panel/item_dialog.c,
+	settings/xfce_settings_dialog.c: Add GTK_WIDGET_SET_FLAGS (button,
+	GTK_CAN_DEFAULT) to the buttons that should have it
+
+2003-03-19  huysmans
+
+	* autogen.sh: Only add extra autogen parameters when none are given
+
+2003-03-18  xfce
+
+	* ChangeLog: Update ChangeLog Update build scripts (ie rerun
+	autogen.sh) Update xfwm4's microdeck theme Remove 1 pix border
+	arround xffm menu bar
+
 2003-03-13  bmeurer
 
 	* panel/mcs_client.c, panel/main.c,
