--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2003-03-25  huysmans
+
+	* panel/xfce_support.c: escape spaces in paths obtaine from gtk
+	file selector
+
+2003-03-24  huysmans
+
+	* panel/item.c: Fix DND bug. Reported by Jens Guballa.
+
+2003-03-23  huysmans
+
+	* panel/: controls_dialog.c, item_dialog.c, main.c: Make dialogs
+	appear on top even if panel is in below layer
+
+2003-03-23  xfce
+
+	* ChangeLog: Update ChangeLog
+
 2003-03-20  xfce
 
 	* panel/controls_dialog.c, panel/item_dialog.c,
