Update german translations
(Old svn revision: 3600)

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-02-17 14:07+0100\n"
-"PO-Revision-Date: 2003-01-25 03:25+0100\n"
+"PO-Revision-Date: 2003-03-28 11:18+0100\n"
 "Last-Translator: Moritz Heiber <mistermoe@hackerboard.de>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 
 #: panel/controls.c:278 panel/panel.c:115
 msgid "/_Properties..."
-msgstr ""
+msgstr "/_Eigenschaften..."
 
 #: panel/controls.c:279
 msgid "/_Remove"
@@ -82,7 +82,7 @@ msgstr "Spiele"
 
 #: panel/icons.c:70
 msgid "Help browser"
-msgstr "Hilfebrowser"
+msgstr "Hilfe"
 
 #: panel/icons.c:71
 msgid "Multimedia"
@@ -155,7 +155,7 @@ msgstr "In _Terminal ausführen"
 
 #: panel/item_dialog.c:415 plugins/mailcheck/mailcheck.c:637
 msgid "Use startup _notification"
-msgstr ""
+msgstr "Benutze Startup _Notifikation"
 
 #: panel/item_dialog.c:441
 msgid "Caption:"
@@ -163,7 +163,7 @@ msgstr "Bezeichnung:"
 
 #: panel/item_dialog.c:479
 msgid "Tooltip:"
-msgstr "Hinweis:"
+msgstr "Tooltip:"
 
 #: panel/item_dialog.c:614
 msgid "Icon Preview"
@@ -185,7 +185,7 @@ msgstr "Entfernen"
 
 #: panel/main.c:71
 msgid "Are you sure you want to exit?"
-msgstr "Sind sie sicher, das sie beenden wollen?"
+msgstr "Sind sie sicher, das sie XFce beenden wollen?"
 
 #: panel/main.c:161
 #, c-format
@@ -204,9 +204,9 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Ihr Fenstermanager scheint nicht die neuen Fenstermanager Hintswie sie auf "
-"http://www.freedesktop.org definiert sind. \n"
-"Einige Funktionen von XFce könnten nicht wie erwartetet funktionieren"
+"Ihr Fenstermanager scheint nicht die neuen Fenstermanager Hints, wie sie auf "
+"http://www.freedesktop.org definiert sind, zu unterstützen. \n"
+"Einige Funktionen von XFce könnten nicht wie erwartetet arbeiten"
 
 #: panel/mcs_client.c:192
 msgid "Settings manager not available"
