--- a/TODO
+++ b/TODO
@@ -10,7 +10,6 @@ Nice to have for 4.0
 --------------------
 * more themes: Night, KDE, Next, WindowsXP, BeOS, ...
   (not too many released with xfce4; < 10)
-* snap panel to corners and center of screen edges
 
 After 4.0 
 ------------------------------------
@@ -30,5 +29,5 @@ After 4.0
 * write API docs for plugin writers
 * new dialog for panel controls (treeview with dialog area)
   adding/removing controls from here.
-
+* Move to glib xml parsing. More work, but more speed / reduced memory usage
 
