--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,5 @@ Biju Chacko <botsie@myrealbox.com>
 Jens Luedicke <jens@irs-net.com>
 Martin Loschwitz <madkiss@users.sourceforge.net>
 Xavier Maillard <zedek@fxgsproject.org>
-Michael Mosier" <michael@spyonit.com>
+Michael Mosier <michael@spyonit.com>
+Erik Touve <etouve@earthlink.net>
